--- a/woot_paypal/templates/woot_paypal/signup.html
+++ b/woot_paypal/templates/woot_paypal/signup.html
@@ -33,7 +33,7 @@
 						<span class="fa fa-user"></span>
 					</span>                    
 				</div>
-				<input type="text" class="form-control" name="username" placeholder="Username" required="required">
+				<input type="text" class="form-control" name="full_name" placeholder="Fullname" required="required">
 			</div>
         </div>
         <div class="form-group">
